# iDrank

./: .gitignore  LICENSE  README.md  drinq.pro  howto.txt  iDrank_pl.db.sql  qmake-destination-path.pri  qmake-target-platform.pri
drink-tests/: drink-tests.pro
drink-tests/source/: main.cpp  testsuite.cpp  testsuite.h
drink-tests/source/controllers/: mastercontrollertests.cpp  mastercontrollertests.h
drink-tests/source/data/: datetimedecoratortests.cpp  datetimedecoratortests.h  enumeratordecoratortests.cpp  enumeratordecoratortests.h  intdecoratortests.cpp  intdecoratortests.h  stringdecoratortests.cpp  stringdecoratortests.h
drink-tests/source/models/: clienttests.cpp  clienttests.h  tst_drinqtests.cpp
drinq-lib/: drinq-lib.pro
drinq-lib/source/: drinq-lib_global.h
drinq-lib/source/controllers/: commandcontroller.cpp  commandcontroller.h  commandcontrollerinterface.h  databasecontroller.cpp  databasecontroller.h  databasecontrollerinterface.h  drinkcontroller.cpp  drinkcontroller.h  mastercontroller.cpp  mastercontroller.h  mastercontroller2.cpp  mastercontroller2.h  navigationcontroller.h  navigationcontrollerinterface.h  (+2 more)
drinq-ui/: assets.qrc  components.qrc  drinq-ui.pro  views.qrc
drinq-ui-simple/: AboutView.qml  ConfirmationDialog.qml  CustomDialog.qml  DashboardView.qml  DrinkPropertiesView.qml  HistoryMasterView.qml  LabelDialog.qml  MasterView.qml  PartiesView.qml  PartyDashboardMasterView.qml  PartyDashboardView.qml  PartyMasterView.qml  PartyStatisticsView.qml  PartySummaryView.qml  PlayersView.qml  RegisterUserView.qml  StartPartyView.qml  TextFieldDialog.qml  drinq-ui-simple.pro  main.cpp  main.qml  qml.qrc  translate.sh
drinq-ui-simple/assets/: Style.qml
drinq-ui-simple/components/: customchart.cpp  customchart.h
drinq-ui-simple/db/: iDrank_pl.db.sql
drinq-ui-simple/js/: common.js
drinq-ui-simple/translations/: iDrank_pl_PL.ts
drinq-ui/assets/: Style.qml  qmldir
drinq-ui/components/: AddressEditor.qml  CommandBar.qml  CommandButton.qml  ContactDelegate.qml  ContactsEditor.qml  DrinkDelegate.qml  DrinksEditor.qml  EnumeratorSelector.qml  EnumeratorSelectorView.qml  FormButton.qml  NavigationBar.qml  NavigationButton.qml  NumberEditorSingleLine.qml  Panel.qml  RecentActivityItemDelegate.qml  SearchResultDelegate.qml  StringEditorSingleLine.qml  qmldir
drinq-ui/source/: main.cpp
drinq-ui/views/: CreateClientView.qml  DashboardView.qml  EditClientView.qml  EditPartyView.qml  FindClientView.qml  MasterView.qml  SplashView.qml
iDrank/: CMakeLists.txt
iDrank/db/: iDrank_pl.db.sql
iDrank/src/app/: CMakeLists.txt  databasecontroller.h  drink.h  drinktype.h  drinktypecontroller.h  involveduserscontroller.h  main.cpp  party.h  partycontroller.h  partyplotter.cpp  partyplotter.h  toast.h  user.h  userdrink.h  userscontroller.h
iDrank/src/app/MyQml/: AboutView.qml  CMakeLists.txt  ChartViewMock.qml  DashboardView.qml  DrinkPropertiesView.qml  HistoryMasterView.qml  LabelDialog.qml  MasterView.qml  PartiesView.qml  PartyDashboardMasterView.qml  PartyDashboardView.qml  PartyMasterView.qml  PartyStatisticsView.qml  PlayersView.qml  RegisterUserView.qml  StartPartyView.qml  TextFieldDialog.qml
iDrank/src/app/assets/db/: iDrank.db
iDrank/src/app/js/: common.js
(+44 files in other folders)
